Added cross button

--- a/app/index.css
+++ b/app/index.css
@@ -146,6 +146,14 @@
 	width: 100%;
 }
 
+.float-right {
+	float: right;
+}
+
+.float-left {
+	float: left;
+}
+
 .ace_editor { height: 250px; }
 
 /* Floating right button set */
