--- a/app/index.css
+++ b/app/index.css
@@ -4,6 +4,10 @@
 	margin: 0 auto;
 }
 
+.m0{
+	margin: 0px;
+}
+
 .m2 {
 	margin: 2px;
 }
@@ -52,6 +56,33 @@
 .mt48 {
 	margin-top: 48px;
 }
+
+
+/*TOP BOTTOM MARGINS */
+.mtb0 {
+	margin: 0px 0px;
+} 
+
+.mtb2 {
+	margin: 2px 2px;
+}
+
+.mtb4 {
+	margin: 4px 4px;
+}
+
+.mtb8 {
+	margin: 8px 8px;
+}
+
+.mtb16 {
+	margin: 16px 16px;
+}
+
+.mtb32 {
+	margin: 32px 32px;
+}
+
 
 /*PADDINGS*/
 
@@ -146,6 +177,17 @@
 	width: 100%;
 }
 
+/*COLORS*/
+.color-red {
+	color: red;
+}
+
+.color-green {
+	color: green;
+}
+
+
+/*FLOATS*/
 .float-right {
 	float: right;
 }
@@ -176,7 +218,20 @@
     box-shadow: 0px 0px 2px 0px;
 }
 
-
 .mcq-md-card {
 	width: 300px;
+}
+
+.cross-button-position {
+	position: absolute;
+	top:0px;
+	right:0px;
+}
+
+.incorrect-answer {
+	border-bottom: 2px solid red;
+}
+
+.correct-answer {
+	border-bottom: 2px solid green;
 }
